# fakestar

./: .gitignore  LICENSE  README.md  pyproject.toml
corpus/: calibration.json  labeled_repos.json
corpus/data/: golden.json
docs/: calibration.md
docs/superpowers/plans/: 2026-06-26-fake-star-detector.md
docs/superpowers/specs/: 2026-06-26-fake-star-detector-design.md
fakestar/: baselines.py  cli.py  github.py  models.py  report.py  scoring.py
fakestar/detectors/: _common.py  engagement.py  profiles.py  ratios.py  temporal.py
tests/: test_baselines.py  test_cli.py  test_engagement.py  test_github.py  test_models.py  test_profiles.py  test_ratios.py  test_report.py  test_scoring.py  test_temporal.py
tools/: build_calibration.py  fetch_data.py  validate_repos.py
